index and style got chamged

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     </div>
     <div class="container">
           <!-- <h1>TIC-TAC-TOE</h1> -->
+          <div class="box-container">
         <button class="box"></button>
         <button class="box"></button>
         <button class="box"></button>
@@ -25,10 +26,11 @@
         <button class="box"></button>
         <button class="box"></button>
         <button class="box"></button>
+        </div>
         <!-- <button>reset button</button> -->
     </div>
     <div class="reset">
-        <button>reset game</button>
+        <button id="res">reset game</button>
     </div>
 
     
